ensure io container is aligned

--- a/src/Graph.css
+++ b/src/Graph.css
@@ -57,6 +57,7 @@
   width: 100%;
   height: 16px;
   margin: 0;
+  left: 0;
   pointer-events: none;
   background-color: transparent;
 }
